--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -58,9 +58,9 @@
                     <h3>Mousse au chocolat</h3>
                     <h4>Au piment d'espelette et à la truffe noire</h4>
                 </div>
-                <div class="commander">
+                <a href="#" class="commander">
                     <li>Commander</li>
-                </div>
+                </a>
             </div>
         </section>
         <footer>
