--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </a>
                     </div>
                     <div class="lanoteenchantee nouveauresto">
-                        <a href="lanoteenchantée"><img class="enchantée" src="images/restaurants/lanoteenchantée.jpg">
+                        <a href="lanoteenchantée.html"><img class="enchantée" src="images/restaurants/lanoteenchantée.jpg">
                             <div class="nouveauté">
                                 <h4>Nouveau</h4>
                             </div>   
@@ -52,7 +52,7 @@
                             <p>Charonne</p>
                         </a>
                     </div>
-                    <div class="alafrançaise nouveau resto">
+                    <div class="alafrançaise">
                         <a href="alafrancaise.html"><img class="française" src="images/restaurants/alafrançaise.jpg">
                             <h3>A la française<i class="far fa-heart"></i></h3>
                             <p>Cité rouge</p>
