--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </a>
                     </div>
                     <div class="alafrançaise">
-                        <a href="alafrancaise.html"><img class="française" src="images/restaurants/alafrançaise.jpg">
+                        <a href="alafrancaise.html"><img class="française" src="images/restaurants/alafrancaise.jpg">
                             <h3>A la française<i class="far fa-heart"></i></h3>
                             <p>Cité rouge</p>
                         </a>
