--- a/lanoteenchantée.html
+++ b/lanoteenchantée.html
@@ -12,11 +12,11 @@
         <header>
             <div class="contenaireentete">
                 <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-                <img src="images/logo/logo-ohmyfood.svg" alt="logo du site" class="logo" />
+                <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo" />
             </div>
         </header>
         <section>
-            <img src="images/restaurants/alafrançaise.jpg" alt="restaurantalafrançaise">
+            <img src="images/restaurants/alafrancaise.jpg" alt="restaurantalafrançaise">
             <div class="carterestaurant">
                 <h1>La note enchantée<i class="far fa-heart"></i></h1>
                 <h2>ENTREES</h2>
@@ -63,7 +63,7 @@
                     <h4>Destructurée</h4>
                 </div>
                 <div class="commander">
-                    <li>Commander</li>
+                    <li><a href="#">Commander</a></li>
                 </div>
             </div>
         </section>
