--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -12,11 +12,11 @@
         <header>
             <div class="contenaireentete">
                 <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-                <img src="images/logo/logo-ohmyfood.svg" alt="logo du site" class="logo" />
+                <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo" />
             </div>
         </header>
         <section>
-            <img src="images/restaurants/alafrançaise.jpg" alt="restaurantalafrançaise">
+            <img src="images/restaurants/lapalettedugout.jpg" alt="restaurantalafrançaise">
             <div class="carterestaurant">
                 <h1>La palette du goût<i class="far fa-heart"></i></h1>
                 <h2>ENTREES</h2>
@@ -59,7 +59,7 @@
                     <h4>Au piment d'espelette et à la truffe noire</h4>
                 </div>
                 <div class="commander">
-                    <li>Commander</li>
+                    <li><a href="#">Commander</li></a>
                 </div>
             </div>
         </section>
