animation des coeurs

--- a/index.html
+++ b/index.html
@@ -42,29 +42,55 @@
                                 <p>Nouveau</p>
                             </div>
                             <img src="images/restaurants/lapalettedugout.jpg">
-                            <h3>La palette du goût<i class="far fa-heart"></i></h3>
+                            <h3>La palette du goût</h3>
+                            <span class="coeurvide">
+                                <i class="far fa-heart"></i>
+                            </span>
+                            <span class="coeurplein">
+                                <i class="fas fa-heart"></i>
+                            </span>
                             <p>Ménilmontant</p>
                         </a>
                     </div>
                     <div class="lanoteenchantee">
-                        <a href="lanoteenchantée.html">
+                        <a href="lanoteenchantee.html">
                             <div class="nouveauté">
                                 <p>Nouveau</p>
                             </div>
-                            <img src="images/restaurants/lanoteenchantée.jpg">
-                            <h3>La note enchantée<i class="far fa-heart"></i></h3>
+                            <img src="images/restaurants/lanoteenchantee.jpg">
+                            <h3>La note enchantée</h3>
+                            <span class="coeurvide">
+                                <i class="far fa-heart"></i>
+                            </span>
+                            <span class="coeurplein">
+                                <i class="fas fa-heart"></i>
+                            </span>
                             <p>Charonne</p>
                         </a>
                     </div>
-                    <div class="alafrançaise">
-                        <a href="alafrancaise.html"><img src="images/restaurants/alafrancaise.jpg">
-                            <h3>A la française<i class="far fa-heart"></i></h3>
+                    <div class="alafrancaise">
+                        <a href="alafrancaise.html">
+                            <img src="images/restaurants/alafrancaise.jpg">
+                            <h3>A la française</h3>
+                            <span class="coeurvide">
+                                <i class="far fa-heart"></i>
+                            </span>
+                            <span class="coeurplein">
+                                <i class="fas fa-heart"></i>
+                            </span>
                             <p>Cité rouge</p>
                         </a>
                     </div>
                     <div class="ledelicedessens">
-                        <a href="ledelicedessens.html"><img src="images/restaurants/ledelicedessens.jpg">
-                            <h3>Le délice des sens<i class="far fa-heart"></i></h3>
+                        <a href="ledelicedessens.html">
+                            <img src="images/restaurants/ledelicedessens.jpg">
+                            <h3>Le délice des sens</h3>
+                            <span class="coeurvide">
+                                <i class="far fa-heart"></i>
+                            </span>
+                            <span class="coeurplein">
+                                <i class="fas fa-heart"></i>
+                            </span>
                             <p>Folie-Méricourt</p>
                         </a>
                     </div>
