mise en place responsive

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -8,55 +8,55 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <title>Oh my food, Réservez le menu qui vous convient</title>
     </head>
-    <body> 
+    <body class="cartes-menus"> 
         <header>
-            <div class="contenaireentete">
+            <div class="contenaire-en-tete">
                 <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                 <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo" />
             </div>
         </header>
         <section>
             <img src="images/restaurants/alafrancaise.jpg" alt="restaurantalafrançaise">
-            <div class="carterestaurant">
+            <div class="carte-restaurant">
                 <h1>A la française<i class="far fa-heart"></i></h1>
                 <h2>ENTREES</h2>
                 <div class="plat">
                     <h3>Tartare de poulpe acidulé</h3>
-                    <h4>Aux zests d'orange</h4>
+                    <h4>Aux zests d'orange<span class="tarif">25€</span></h4> 
                 </div>
                 <div class="plat">
                     <h3>Velouté de légumes d'antan</h3>
-                    <h4>Carotte, panais, topinambour</h4>
+                    <h4>Carotte, panais, topinambour<span class="tarif">35€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Soupe à l'oignon</h3>
-                    <h4>Revisitée</h4>
+                    <h4>Revisitée<span class="tarif">20€</span></h4>
                 </div>
                 <h2>Plats</h2>
                 <div class="plat">
                     <h3>Coquilles Saint-Jacques</h3>
-                    <h4>Accompagnées d'une purée de panais</h4>
+                    <h4>Accompagnées d'une purée de panais<span class="tarif">40€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Magret de canard</h3>
-                    <h4>Et parmentier de pommes de terres</h4>
+                    <h4>Et parmentier de pommes de terres<span class="tarif">35€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Pigeonneau d'ille-et-vilaine</h3>
-                    <h4>Sur son lit de gnocchis aux légumes</h4>
+                    <h4>Sur son lit de gnocchis aux légumes<span class="tarif">44€</span></h4>
                 </div>
                 <h2>DESSERTS</h2>
                 <div class="plat">
                     <h3>Pétales de violettes glacés</h3>
-                    <h4>Et purée de noisettes</h4>
+                    <h4>Et purée de noisettes<span class="tarif">18€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Fondant au chocolat</h3>
-                    <h4>Revisité</h4>
+                    <h4>Revisité<span class="tarif">22€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Millefeuille croustillant</h3>
-                    <h4>Myrtilles et pâte d'amande</h4>
+                    <h4>Myrtilles et pâte d'amande<span class="tarif">23€</span></h4>
                 </div>
                 <div class="commander">
                     <li><a href="#">Commander</a></li>
@@ -66,7 +66,7 @@
         <footer>
             <div class="colonne">
                 <h3>Ohmyfood</h3>
-                <div class="lienfooter">
+                <div>
                     <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                     <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
                     <li><a href="#">Mentions légales</a></li>
@@ -75,8 +75,4 @@
             </div>
         </footer>
     </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> juliendardennes/ohmygood/master
