--- a/index.html
+++ b/index.html
@@ -35,63 +35,63 @@
         <aside>
             <div id="restaurants">
                 <h2>Restaurants</h2>
-                <div class="vignettesrestaurants">
-                    <div class="lapalettedugout">
+                <div class="restaurants">
+                    <div class="vignette-restaurant">
                         <a href="lapalettedugout.html">
-                            <div class="nouveauté">
+                            <div class="nouveaute">
                                 <p>Nouveau</p>
                             </div>
                             <img src="images/restaurants/lapalettedugout.jpg">
                             <h3>La palette du goût</h3>
-                            <span class="coeurvide">
+                            <span class="coeur-vide">
                                 <i class="far fa-heart"></i>
                             </span>
-                            <span class="coeurplein">
+                            <span class="coeur-plein">
                                 <i class="fas fa-heart"></i>
                             </span>
-                            <p>Ménilmontant</p>
+                            <h4>Ménilmontant</h4>
                         </a>
                     </div>
-                    <div class="lanoteenchantee">
+                    <div class="vignette-restaurant">
                         <a href="lanoteenchantee.html">
-                            <div class="nouveauté">
+                            <div class="nouveaute">
                                 <p>Nouveau</p>
                             </div>
                             <img src="images/restaurants/lanoteenchantee.jpg">
                             <h3>La note enchantée</h3>
-                            <span class="coeurvide">
+                            <span class="coeur-vide">
                                 <i class="far fa-heart"></i>
                             </span>
-                            <span class="coeurplein">
+                            <span class="coeur-plein">
                                 <i class="fas fa-heart"></i>
                             </span>
-                            <p>Charonne</p>
+                            <h4>Charonne</h4>
                         </a>
                     </div>
-                    <div class="alafrancaise">
+                    <div class="vignette-restaurant">
                         <a href="alafrancaise.html">
                             <img src="images/restaurants/alafrancaise.jpg">
                             <h3>A la française</h3>
-                            <span class="coeurvide">
+                            <span class="coeur-vide">
                                 <i class="far fa-heart"></i>
                             </span>
-                            <span class="coeurplein">
+                            <span class="coeur-plein">
                                 <i class="fas fa-heart"></i>
                             </span>
-                            <p>Cité rouge</p>
+                            <h4>Cité rouge</h4>
                         </a>
                     </div>
-                    <div class="ledelicedessens">
+                    <div class="vignette-restaurant">
                         <a href="ledelicedessens.html">
                             <img src="images/restaurants/ledelicedessens.jpg">
                             <h3>Le délice des sens</h3>
-                            <span class="coeurvide">
+                            <span class="coeur-vide">
                                 <i class="far fa-heart"></i>
                             </span>
-                            <span class="coeurplein">
+                            <span class="coeur-plein">
                                 <i class="fas fa-heart"></i>
                             </span>
-                            <p>Folie-Méricourt</p>
+                            <h4>Folie-Méricourt</H4>
                         </a>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
         <footer>
             <div class="colonne">
                 <h3>Ohmyfood</h3>
-                <div class="lienfooter">
+                <div>
                     <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                     <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
                     <li><a href="#">Mentions légales</a></li>
