--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -22,41 +22,41 @@
                 <h2>ENTREES</h2>
                 <div class="plat">
                     <h3>Tartare de thon</h3>
-                    <h4>Assaisonné au yuzu</h4>
+                    <h4>Assaisonné au yuzu<span class="prix">25€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Bouchée de homard croustillant</h3>
-                    <h4>Et sa farandole de petits légumes</h4>
+                    <h4>Et sa farandole de petits légumes<span class="prix">35€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Velouté de cèpes</h3>
-                    <h4>Aux truffes</h4>
+                    <h4>Aux truffes<span class="prix">20€</span></h4>
                 </div>
                 <h2>Plats</h2>
                 <div class="plat">
                     <h3>Poulet rôti aux herbes de provence</h3>
-                    <h4>Et sa crème de truffe</h4>
+                    <h4>Et sa crème de truffe<span class="prix">40€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Langouste rôtie</h3>
-                    <h4>Et ses légumes de saison</h4>
+                    <h4>Et ses légumes de saison<span class="prix">35€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Côte de boeuf angus</h3>
-                    <h4>Et sa purée de panais</h4>
+                    <h4>Et sa purée de panais<span class="prix">44€</span></h4>
                 </div>
                 <h2>DESSERTS</h2>
                 <div class="plat">
                     <h3>Farandole de desserts</h3>
-                    <h4>du chef</h4>
+                    <h4>du chef<span class="prix">18€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Crème brûlée</h3>
-                    <h4>Revisitée</h4>
+                    <h4>Revisitée<span class="prix">22€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Tiramisu</h3>
-                    <h4>A la noisette</h4>
+                    <h4>A la noisette<span class="prix">23€</span></h4>
                 </div>
                 <div class="commander">
                     <li><a href="#">Commander</a></li>
