--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -22,45 +22,45 @@
                 <h2>ENTREES</h2>
                 <div class="plat">
                     <h3>Ravioles de foie gras</h3>
-                    <h4>Accompagnés de leur crème à la truffe</h4>
+                    <h4>Accompagnés de leur crème à la truffe<span class="prix">25€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Caviar osciètre</h3>
-                    <h4>Sur blini à la farine de blé noir </h4>
+                    <h4>Sur blini à la farine de blé noir<span class="prix">35€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Homard et espuma de ...</h3>
-                    <h4>Marinée aux zests d'orange</h4>
+                    <h4>Marinée aux zests d'orange<span class="prix">20€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Foie gras de canard cuit entier</h3>
-                    <h4>Confiture de figue et pain toasté</h4>
+                    <h4>Confiture de figue et pain toasté<span class="prix">35€</span></h4>
                 </div>
                 <h2>Plats</h2>
                 <div class="plat">
                     <h3>Noix de coquille Saint-Jacques</h3>
-                    <h4>Sur lit de purée de céleri-rave</h4>
+                    <h4>Sur lit de purée de céleri-rave<span class="prix">40€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Langoustine pôélée</h3>
-                    <h4>Purée de patate douce</h4>
+                    <h4>Purée de patate douce<span class="prix">35€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Mijoté de queue de boeuf</h3>
-                    <h4>Et riz sauvage aux zests de citron</h4>
+                    <h4>Et riz sauvage aux zests de citron<span class="prix">44€</span></h4>
                 </div>
                 <h2>DESSERTS</h2>
                 <div class="plat">
                     <h3>Macaron noisette et chocolat</h3>
-                    <h4>Glace au caramel brun et sel de Guérande</h4>
+                    <h4>Glace au caramel brun et sel de Guérande<span class="prix">18€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Baba au rhum revisité</h3>
-                    <h4>Et son coulis de citron</h4>
+                    <h4>Et son coulis de citron<span class="prix">22€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Tarte au citron meringuée</h3>
-                    <h4>Destructurée</h4>
+                    <h4>Destructurée<span class="prix">23€</span></h4>
                 </div>
                 <div class="commander">
                     <li><a href="#">Commander</a></li>
