--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -22,41 +22,41 @@
                 <h2>ENTREES</h2>
                 <div class="plat">
                     <h3>Fricassée d'escargot</h3>
-                    <h4>Au piment d'espelette</h4>
+                    <h4>Au piment d'espelette<span class="prix">25€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Foie gras de canard mi-cuit</h3>
-                    <h4>Et ses copeaux de truffes noire</h4>
+                    <h4>Et ses copeaux de truffes noire<span class="prix">35€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Oeuf au plat</h3>
-                    <h4>Assaisonnée à la truffe sur lit de ...</h4>
+                    <h4>Assaisonnée à la truffe sur lit de ...<span class="prix">20€</span></h4>
                 </div>
                 <h2>Plats</h2>
                 <div class="plat">
                     <h3>Filet de boeuf aux herbes</h3>
-                    <h4>Accompagnées de sa ribambelle de légumes</h4>
+                    <h4>Accompagnées de sa ribambelle de légumes<span class="prix">40€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Parmentier de queue de boeuf</h3>
-                    <h4>A la truffe noire sur sa purée de panais</h4>
+                    <h4>A la truffe noire sur sa purée de panais<span class="prix">35€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Filet de Turbot</h3>
-                    <h4>Aux agrumes</h4>
+                    <h4>Aux agrumes<span class="prix">44€</span></h4>
                 </div>
                 <h2>DESSERTS</h2>
                 <div class="plat">
                     <h3>Paris-brest</h3>
-                    <h4>Revisité</h4>
+                    <h4>Revisité<span class="prix">18€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Macaron au chocolat d'exception</h3>
-                    <h4>Et glace à la vanille de Madagascar</h4>
+                    <h4>Et glace à la vanille de Madagascar<span class="prix">22€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Mousse au chocolat</h3>
-                    <h4>Au piment d'espelette et à la truffe noire</h4>
+                    <h4>Au piment d'espelette et à la truffe noire<span class="prix">23€</span></h4>
                 </div>
                 <div class="commander">
                     <li><a href="#">Commander</li></a>
