--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="https://kit.fontawesome.com/d49663bb5d.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
         <title>Oh my food, Réservez le menu qui vous convient</title>
     </head>
     <body> 
@@ -37,60 +37,44 @@
                 <h2>Restaurants</h2>
                 <div class="restaurants">
                     <div class="vignette-restaurant">
-                        <a href="lapalettedugout.html">
+                        <a href="la-palette-du-gout.html">
                             <div class="nouveaute">
                                 <p>Nouveau</p>
                             </div>
                             <img src="images/restaurants/lapalettedugout.jpg">
                             <h3>La palette du goût</h3>
-                            <span class="coeur-vide">
-                                <i class="far fa-heart"></i>
-                            </span>
-                            <span class="coeur-plein">
-                                <i class="fas fa-heart"></i>
-                            </span>
+                            <div class="icone-vide"><i class="far fa-heart"></i></div>
+                            <div class="icone-vide icone-plein"><i class="far fa-heart"></i></div>
                             <h4>Ménilmontant</h4>
                         </a>
                     </div>
                     <div class="vignette-restaurant">
-                        <a href="lanoteenchantee.html">
+                        <a href="la-note-enchantee.html">
                             <div class="nouveaute">
                                 <p>Nouveau</p>
                             </div>
                             <img src="images/restaurants/lanoteenchantee.jpg">
                             <h3>La note enchantée</h3>
-                            <span class="coeur-vide">
-                                <i class="far fa-heart"></i>
-                            </span>
-                            <span class="coeur-plein">
-                                <i class="fas fa-heart"></i>
-                            </span>
+                            <div class="icone-vide"><i class="far fa-heart"></i></div>
+                            <div class="icone-vide icone-plein"><i class="far fa-heart"></i></div>
                             <h4>Charonne</h4>
                         </a>
                     </div>
                     <div class="vignette-restaurant">
-                        <a href="alafrancaise.html">
+                        <a href="a-la-francaise.html">
                             <img src="images/restaurants/alafrancaise.jpg">
                             <h3>A la française</h3>
-                            <span class="coeur-vide">
-                                <i class="far fa-heart"></i>
-                            </span>
-                            <span class="coeur-plein">
-                                <i class="fas fa-heart"></i>
-                            </span>
+                            <div class="icone-vide"><i class="far fa-heart"></i></div>
+                            <div class="icone-vide icone-plein"><i class="far fa-heart"></i></div>
                             <h4>Cité rouge</h4>
                         </a>
                     </div>
                     <div class="vignette-restaurant">
-                        <a href="ledelicedessens.html">
+                        <a href="le-delice-des-sens.html">
                             <img src="images/restaurants/ledelicedessens.jpg">
                             <h3>Le délice des sens</h3>
-                            <span class="coeur-vide">
-                                <i class="far fa-heart"></i>
-                            </span>
-                            <span class="coeur-plein">
-                                <i class="fas fa-heart"></i>
-                            </span>
+                            <div class="icone-vide"><i class="far fa-heart"></i></div>
+                            <div class="icone-vide icone-plein"><i class="far fa-heart"></i></div>
                             <h4>Folie-Méricourt</H4>
                         </a>
                     </div>
