--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -10,67 +10,63 @@
     </head>
     <body> 
         <header>
-            <div class="contenaireentete">
+            <div class="contenaire-en-tete">
                 <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                 <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo" />
             </div>
         </header>
         <section>
-            <img src="images/restaurants/alafrancaise.jpg" alt="restaurantalafrançaise">
-            <div class="carterestaurant">
-                <h1>La note enchantée<i class="far fa-heart"></i></h1>
+            <img src="images/restaurants/lapalettedugout.jpg" alt="restaurantalafrançaise">
+            <div class="carte-restaurant">
+                <h1>La palette du goût<i class="far fa-heart"></i></h1>
                 <h2>ENTREES</h2>
                 <div class="plat">
-                    <h3>Ravioles de foie gras</h3>
-                    <h4>Accompagnés de leur crème à la truffe<span class="prix">25€</span></h4>
+                    <h3>Fricassée d'escargot</h3>
+                    <h4>Au piment d'espelette<span class="tarif">25€</span></h4>
                 </div>
                 <div class="plat">
-                    <h3>Caviar osciètre</h3>
-                    <h4>Sur blini à la farine de blé noir<span class="prix">35€</span></h4>
+                    <h3>Foie gras de canard mi-cuit</h3>
+                    <h4>Et ses copeaux de truffes noire<span class="tarif">35€</span></h4>
                 </div>
                 <div class="plat">
-                    <h3>Homard et espuma de ...</h3>
-                    <h4>Marinée aux zests d'orange<span class="prix">20€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Foie gras de canard cuit entier</h3>
-                    <h4>Confiture de figue et pain toasté<span class="prix">35€</span></h4>
+                    <h3>Oeuf au plat</h3>
+                    <h4>Assaisonnée à la truffe sur lit de ...<span class="tarif">20€</span></h4>
                 </div>
                 <h2>Plats</h2>
                 <div class="plat">
-                    <h3>Noix de coquille Saint-Jacques</h3>
-                    <h4>Sur lit de purée de céleri-rave<span class="prix">40€</span></h4>
+                    <h3>Filet de boeuf aux herbes</h3>
+                    <h4>Accompagnées de sa ribambelle de légumes<span class="tarif">40€</span></h4>
                 </div>
                 <div class="plat">
-                    <h3>Langoustine pôélée</h3>
-                    <h4>Purée de patate douce<span class="prix">35€</span></h4>
+                    <h3>Parmentier de queue de boeuf</h3>
+                    <h4>A la truffe noire sur sa purée de panais<span class="tarif">35€</span></h4>
                 </div>
                 <div class="plat">
-                    <h3>Mijoté de queue de boeuf</h3>
-                    <h4>Et riz sauvage aux zests de citron<span class="prix">44€</span></h4>
+                    <h3>Filet de Turbot</h3>
+                    <h4>Aux agrumes<span class="tarif">44€</span></h4>
                 </div>
                 <h2>DESSERTS</h2>
                 <div class="plat">
-                    <h3>Macaron noisette et chocolat</h3>
-                    <h4>Glace au caramel brun et sel de Guérande<span class="prix">18€</span></h4>
+                    <h3>Paris-brest</h3>
+                    <h4>Revisité<span class="tarif">18€</span></h4>
                 </div>
                 <div class="plat">
-                    <h3>Baba au rhum revisité</h3>
-                    <h4>Et son coulis de citron<span class="prix">22€</span></h4>
+                    <h3>Macaron au chocolat d'exception</h3>
+                    <h4>Et glace à la vanille de Madagascar<span class="tarif">22€</span></h4>
                 </div>
                 <div class="plat">
-                    <h3>Tarte au citron meringuée</h3>
-                    <h4>Destructurée<span class="prix">23€</span></h4>
+                    <h3>Mousse au chocolat</h3>
+                    <h4>Au piment d'espelette et à la truffe noire<span class="tarif">23€</span></h4>
                 </div>
                 <div class="commander">
-                    <li><a href="#">Commander</a></li>
+                    <li><a href="#">Commander</li></a>
                 </div>
             </div>
         </section>
         <footer>
             <div class="colonne">
                 <h3>Ohmyfood</h3>
-                <div class="lienfooter">
+                <div>
                     <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                     <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
                     <li><a href="#">Mentions légales</a></li>
@@ -79,8 +75,4 @@
             </div>
         </footer>
     </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> juliendardennes/ohmygood/master
