--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -10,53 +10,53 @@
     </head>
     <body> 
         <header>
-            <div class="contenaireentete">
+            <div class="contenaire-en-tete">
                 <a href="index.html"><i class="fas fa-arrow-left"></i></a>
                 <img src="images/logo/ohmyfood.png" alt="logo du site" class="logo" />
             </div>
         </header>
         <section>
             <img src="images/restaurants/ledelicedessens.jpg" alt="restaurantalafrançaise">
-            <div class="carterestaurant">
+            <div class="carte-restaurant">
                 <h1>Le délice des sens<i class="far fa-heart"></i></h1>
                 <h2>ENTREES</h2>
                 <div class="plat">
                     <h3>Tartare de thon</h3>
-                    <h4>Assaisonné au yuzu<span class="prix">25€</span></h4>
+                    <h4>Assaisonné au yuzu<span class="tarif">25€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Bouchée de homard croustillant</h3>
-                    <h4>Et sa farandole de petits légumes<span class="prix">35€</span></h4>
+                    <h4>Et sa farandole de petits légumes<span class="tarif">35€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Velouté de cèpes</h3>
-                    <h4>Aux truffes<span class="prix">20€</span></h4>
+                    <h4>Aux truffes<span class="tarif">20€</span></h4>
                 </div>
                 <h2>Plats</h2>
                 <div class="plat">
                     <h3>Poulet rôti aux herbes de provence</h3>
-                    <h4>Et sa crème de truffe<span class="prix">40€</span></h4>
+                    <h4>Et sa crème de truffe<span class="tarif">40€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Langouste rôtie</h3>
-                    <h4>Et ses légumes de saison<span class="prix">35€</span></h4>
+                    <h4>Et ses légumes de saison<span class="tarif">35€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Côte de boeuf angus</h3>
-                    <h4>Et sa purée de panais<span class="prix">44€</span></h4>
+                    <h4>Et sa purée de panais<span class="tarif">44€</span></h4>
                 </div>
                 <h2>DESSERTS</h2>
                 <div class="plat">
                     <h3>Farandole de desserts</h3>
-                    <h4>du chef<span class="prix">18€</span></h4>
+                    <h4>du chef<span class="tarif">18€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Crème brûlée</h3>
-                    <h4>Revisitée<span class="prix">22€</span></h4>
+                    <h4>Revisitée<span class="tarif">22€</span></h4>
                 </div>
                 <div class="plat">
                     <h3>Tiramisu</h3>
-                    <h4>A la noisette<span class="prix">23€</span></h4>
+                    <h4>A la noisette<span class="tarif">23€</span></h4>
                 </div>
                 <div class="commander">
                     <li><a href="#">Commander</a></li>
@@ -66,7 +66,7 @@
         <footer>
             <div class="colonne">
                 <h3>Ohmyfood</h3>
-                <div class="lienfooter">
+                <div>
                     <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                     <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
                     <li><a href="#">Mentions légales</a></li>
