remplissage des coeurs

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -16,7 +16,7 @@
             </div>
         </header>
         <section>
-            <img src="images/restaurants/alafrancaise.jpg" alt="restaurantalafrançaise">
+            <img src="images/restaurants/alafrancaise.jpg" alt="restaurant-a-la-française">
             <div class="carte-restaurant">
                 <h1>A la française<i class="far fa-heart"></i></h1>
                 <h2>ENTREES</h2>
