--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <img src="images/restaurants/lapalettedugout.jpg">
                             <h3>La palette du goût</h3>
                             <div class="icone-vide"><i class="far fa-heart"></i></div>
-                            <div class="icone-vide icone-plein"><i class="far fa-heart"></i></div>
+                            <div class="icone-plein"><i class="fas fa-heart"></i></div>
                             <h4>Ménilmontant</h4>
                         </a>
                     </div>
@@ -56,7 +56,7 @@
                             <img src="images/restaurants/lanoteenchantee.jpg">
                             <h3>La note enchantée</h3>
                             <div class="icone-vide"><i class="far fa-heart"></i></div>
-                            <div class="icone-vide icone-plein"><i class="far fa-heart"></i></div>
+                            <div class="icone-plein"><i class="fas fa-heart"></i></div>
                             <h4>Charonne</h4>
                         </a>
                     </div>
@@ -65,7 +65,7 @@
                             <img src="images/restaurants/alafrancaise.jpg">
                             <h3>A la française</h3>
                             <div class="icone-vide"><i class="far fa-heart"></i></div>
-                            <div class="icone-vide icone-plein"><i class="far fa-heart"></i></div>
+                            <div class="icone-plein"><i class="fas fa-heart"></i></div>
                             <h4>Cité rouge</h4>
                         </a>
                     </div>
@@ -74,7 +74,7 @@
                             <img src="images/restaurants/ledelicedessens.jpg">
                             <h3>Le délice des sens</h3>
                             <div class="icone-vide"><i class="far fa-heart"></i></div>
-                            <div class="icone-vide icone-plein"><i class="far fa-heart"></i></div>
+                            <div class="icone-plein"><i class="fas fa-heart"></i></div>
                             <h4>Folie-Méricourt</H4>
                         </a>
                     </div>
