--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -16,7 +16,7 @@
             </div>
         </header>
         <section>
-            <img src="images/restaurants/alafrancaise.jpg" alt="restaurantalafrançaise">
+            <img src="images/restaurants/lanoteenchantee.jpg" alt="la-note-enchantee">
             <div class="carte-restaurant">
                 <h1>La note enchantée<i class="far fa-heart"></i></h1>
                 <h2>ENTREES</h2>
@@ -79,8 +79,4 @@
             </div>
         </footer>
     </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> juliendardennes/ohmygood/master
