--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -16,7 +16,7 @@
             </div>
         </header>
         <section>
-            <img src="images/restaurants/lapalettedugout.jpg" alt="restaurantalafrançaise">
+            <img src="images/restaurants/lapalettedugout.jpg" alt="la-palette-du-gout">
             <div class="carte-restaurant">
                 <h1>La palette du goût<i class="far fa-heart"></i></h1>
                 <h2>ENTREES</h2>
@@ -58,15 +58,9 @@
                     <h3>Mousse au chocolat</h3>
                     <h4>Au piment d'espelette et à la truffe noire<span class="tarif">23€</span></h4>
                 </div>
-<<<<<<< HEAD
                 <a href="#" class="commander">
                     <li>Commander</li>
                 </a>
-=======
-                <div class="commander">
-                    <li><a href="#">Commander</li></a>
-                </div>
->>>>>>> dev
             </div>
         </section>
         <footer>
