--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -16,7 +16,7 @@
             </div>
         </header>
         <section>
-            <img src="images/restaurants/ledelicedessens.jpg" alt="restaurantalafrançaise">
+            <img src="images/restaurants/ledelicedessens.jpg" alt="le-delice-des-sens">
             <div class="carte-restaurant">
                 <h1>Le délice des sens<i class="far fa-heart"></i></h1>
                 <h2>ENTREES</h2>
